fixed font colors and spacing on daily horoscope

--- a/public/style.css
+++ b/public/style.css
@@ -28,6 +28,9 @@ VI. SPECIAL OBJECTS
 .aboutPoint{
   color: black;
 }
+.list-group{
+  color:black;
+}
 
 /*SECTION II*/
 html,
